Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(Object var)
        output "passed"
    end
end
