Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(Object var)
    end
end
